light_clone/tests/ui/vec_field.stderr
error[E0277]: the trait bound `Vec<i32>: LcClone` is not satisfied
 --> tests/ui/vec_field.rs:3:10
  |
3 | #[derive(LightClone)]
  |          ^^^^^^^^^^ the trait `LcClone` is not implemented for `Vec<i32>`
  |
  = help: the following other types implement trait `LcClone`:
            &T
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
          and $N others
  = note: this error originates in the derive macro `LightClone` (in Nightly builds, run with -Z macro-backtrace for more info)
